gitops/infra-custom/bookorbit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookorbit
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
