gitops/infra-custom/bookorbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookorbit
  namespace: bookorbit
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bookorbit.homelab.niekvlam.nl
      secretName: bookorbit-tls
  rules:
    - host: bookorbit.homelab.niekvlam.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookorbit
                port:
                  number: 3000
